[package]
name = "invaders"
version = "0.1.0"
authors = ["Keys <70819367+keys-i@users.noreply.github.com>"]
edition = "2021"
description = "Open source terminal arcade game with audio - based off of the classic 'Space Invaders'"
homepage = "https://github.com/keys-i/invaders"
repository = "https://github.com/keys-i/invaders"
readme = "README.md"
keywords = ["terminal", "game", "audio", "rusty"]
categories = ["game", "command-line-utilities"]
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.28.1"
rusty_audio = "1.2"
rusty_time = "1.1.0"
